# Game

./: CMakeLists.txt  README.md  build.bat  car.cpp  car.h  draw.h  main.cpp
easyx/Include/: easyx.h  graphics.h
easyx/lib/VC2008/x64/: EasyXa.lib  EasyXw.lib
easyx/lib/VC2008/x86/: EasyXa.lib  EasyXw.lib
easyx/lib/VC6/x86/: EasyXa.lib  EasyXw.lib
